--- a/src/pages/books/index.astro
+++ b/src/pages/books/index.astro
@@ -1,8 +1,8 @@
 ---
-import Page from "../../layouts/Page.astro";
-import { SITE_DESCRIPTION } from "../../consts";
+import Page from "@layouts/Page.astro";
+import { SITE_DESCRIPTION } from "@/consts";
 import { getCollection } from "astro:content";
-import CoverImage from "../../components/CoverImage.astro";
+import CoverImage from "@components/CoverImage.astro";
 
 const books = (await getCollection("books")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
