--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import PageContainer from "../components/PageContainer.astro";
-import LatestReleases from "../components/LatestReleases.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import PageContainer from "@components/PageContainer.astro";
+import LatestReleases from "@components/LatestReleases.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 
 const pageTitle = SITE_TITLE;
 const pageDescription = SITE_DESCRIPTION;
@@ -14,9 +14,9 @@ const pageDescription = SITE_DESCRIPTION;
       <div class="text-center mb-16">
         <h2 class="text-4xl md:text-5xl font-light text-gray-800 mb-8">Our Mission</h2>
         <div class="prose prose-lg mx-auto text-gray-600 leading-relaxed">
-          <p>At Luna Station Press, our mission is to bring you a unique selection of speculative fiction, creative non-fiction, and poetry, with a special focus on women writers. We also publish a short fiction magazine, Luna Station Quarterly, that forms the original foundation for the press.</p>
-          <p>We have a particular fondness for physical media and independent bookshops. Though we do make eBooks for those who really want them, and distribute our books through all of the large corporate channels (if you must), we sincerely hope you'll join us on the page, and in supporting your local bookseller whenever possible.</p>
-          <p>Thank you for visiting. Have fun exploring the Station. Be seeing you.</p>
+          <p class="text-pretty prevent-widows" style="text-wrap: pretty;">At Luna Station Press, our mission is to bring you a unique selection of speculative fiction, creative non-fiction, and poetry, with a special focus on women writers. We also publish a short fiction magazine, Luna Station Quarterly, that forms the original foundation&nbsp;for&nbsp;the&nbsp;press.</p>
+          <p class="text-pretty prevent-widows" style="text-wrap: pretty;">We have a particular fondness for physical media and independent bookshops. Though we do make eBooks for those who really want them, and distribute our books through all of the large corporate channels (if you must), we sincerely hope you'll join us on the page, and in supporting your local bookseller whenever&nbsp;possible.</p>
+          <p class="text-pretty prevent-widows" style="text-wrap: pretty;">Thank you for visiting. Have fun exploring the Station. Be seeing&nbsp;you.</p>
         </div>
       </div>
     </div>
